--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.2.1",
+    "@splinetool/react-spline": "^2.2.1",
+    "@splinetool/runtime": "^0.9.90",
     "firebase": "^9.8.3",
     "framer-motion": "^6.5.1",
     "gh-pages": "^4.0.0",
