--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "^9.19.6",
     "@react-three/fiber": "^8.2.1",
