--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
     "@splinetool/runtime": "^0.9.90",
     "firebase": "^9.8.3",
     "framer-motion": "^6.5.1",
-    "gh-pages": "^4.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
-    "three": "^0.142.0",
-    "vanilla-tilt": "^1.7.2"
+    "three": "^0.142.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
