--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^8.2.1",
     "@splinetool/react-spline": "^2.2.1",
     "@splinetool/runtime": "^0.9.90",
+    "@vercel/analytics": "^0.1.5",
     "firebase": "^9.8.3",
     "framer-motion": "^6.5.1",
     "next": "12.1.6",
